fixed scroll issue on safari and fixed text cut off issue in dashboard screen

--- a/brightStafferapp/static/css/sona.css
+++ b/brightStafferapp/static/css/sona.css
@@ -396,7 +396,7 @@ li.active a {
     text-overflow: ellipsis;
     width: 100%;
     float: left;
-    padding: 0 45px;
+    padding: 0px 45px 4px 45px;
 }
 
 .wbox {
